Alteração de senha

--- a/application/modules/site/views/scripts/index/campanhas.phtml
+++ b/application/modules/site/views/scripts/index/campanhas.phtml
@@ -1,8 +1,7 @@
 <!-- Estrutura da pagina  -->  
 <section id="corpo">
     <div id="estatico">
-        <div id="container_d"> 
-            <div class="left"></div>
+        <div id="container_d">
             <div class="conteudo">
 
                 <!-- Inicio tema principal  -->  
@@ -11,6 +10,8 @@
                 </div>
             </div>
             <!-- FIM tema principal  --> 
+            <div class="left"></div>
+            
 
             <!-- Inicio Leitura - "conteudo"  -->                           
 
@@ -18,7 +19,7 @@
 
 
                 <!-- "conteudo"  -->                         
-                <h4><a name="base" id="base"> <img src="/images/st_gear.png" /></a>  <strong>Confira aqui as vacinas e datas de campanhas de vacina&ccedil;&atilde;o que ser&atilde;o realizadas em 2013:</strong><br/>
+                <h4><a name="base" id="base"> <img src="/images/st_gear.png" /></a>  <strong>Confira aqui as vacinas e datas de campanhas de vacinação que serão realizadas em 2013:</strong><br/>
                 </h4>
                 <hr />
                 <p style="margin-left: 5%;"><br />
@@ -27,7 +28,7 @@
                 <table class="reference">
                     <tbody> 
                         <tr>
-                            <th>Campanha de Vacina&ccedil;&atilde;o</th>
+                            <th>Campanha de Vacinação</th>
                             <th>data</th>
 
                         </tr>
@@ -45,25 +46,25 @@
 
 
                         <tr>
-                            <td>Multivacina&ccedil;&atilde;o</td>
+                            <td>Multivacinação</td>
                             <td>24 a 30 de agosto</td>
 
                         </tr>
 
                         <tr>
-                            <td>Hepatite B 1&ordf; dose</td>
+                            <td>Hepatite B 1ª dose</td>
                             <td>15 a 26 de abril</td>
 
                         </tr>
 
                         <tr>
-                            <td>Hepatite B 2&ordf; dose</td>
+                            <td>Hepatite B 2ª dose</td>
                             <td>15 a 28 de junho</td>
 
                         </tr>
 
                         <tr>
-                            <td>Hepatite B 3&ordf; dose</td>
+                            <td>Hepatite B 3ª dose</td>
                             <td>19 de outubro</td>
 
                         </tr>
