--- a/application/modules/site/views/scripts/index/centro-saude.phtml
+++ b/application/modules/site/views/scripts/index/centro-saude.phtml
@@ -2,36 +2,37 @@
             <section id="corpo">
                 <div id="estatico">
                     <div id="container_d"> 
-                         <div class="left"></div>
-                      			<div class="conteudo">
+                        <div class="conteudo">
                                 
                                  <!-- Inicio tema principal  -->  
-                                	<h3><strong>Centros de Sa&uacute;de de Santa Maria</strong></h3>
+                                	<h3><strong>Centros de Saúde de Santa Maria</strong></h3>
                         					<div class="hr">
 											</div>
                			 		</div>
                           <!-- FIM tema principal  --> 
+                         <div class="left"></div>
+                      			
                          
 <!-- Inicio Leitura - "conteudo"  -->                           
 
 	<div class="leitura">
                           
 <!-- "conteudo"  -->                            
-		<h4><img src="/images/st_gear.png" /><strong> Unidades de Sa&uacute;de Vinculadas </strong> </h4> <br/>
+		<h4><img src="/images/st_gear.png" /><strong> Unidades de Saúde Vinculadas </strong> </h4> <br/>
 
     
-            <p style="margin-left: 5%;"><strong> <img src="/images/st_direito.png" /> Centro de Sa&uacute;de n&ordm; 1</strong> <br />   <br />
-                <strong>Endere&ccedil;o:</strong>&nbsp;QR 213/313<br />
+            <p style="margin-left: 5%;"><strong> <img src="/images/st_direito.png" /> Centro de Saúde nº 1</strong> <br />   <br />
+                <strong>Endereço:</strong>&nbsp;QR 213/313<br />
                 <strong>Telefone:</strong> 3394-3988<br />   <br />
           
   	<img src="/images/bullet.gif" /> Especialidades: </span></p>
     
 			<ul type="disc"style="margin-left: 15%;">
-                  <li> Cl&iacute;nica M&eacute;dica<br />
+                  <li> Clínica Médica<br />
                   </li>
                   <li> Pediatria <br />
                   </li>
-                  <li> Ginecologia/ Obstetr&iacute;cia<br />
+                  <li> Ginecologia/ Obstetrícia<br />
                   </li>
                   <li> Odontologia <br />
                   </li>
@@ -39,43 +40,43 @@
   				  </li> <br />
 			</ul>
             
-        <p style="margin-left: 5%;"><strong> <img src="/images/st_direito.png" /> Centro de Sa&uacute;de n&ordm;2</strong><br /> <br />
+        <p style="margin-left: 5%;"><strong> <img src="/images/st_direito.png" /> Centro de Saúde nº2</strong><br /> <br />
         
-              <strong>Endere&ccedil;o:</strong>&nbsp;QR 202/302<br />
+              <strong>Endereço:</strong>&nbsp;QR 202/302<br />
               <strong>Telefone: </strong>3393-1864<br />  <br />
           
           
   	<img src="/images/bullet.gif" /> Especialidades: </span></p>
             <ul type="disc"style="margin-left: 15%;">
-                  <li> Cl&iacute;nica M&eacute;dica<br />
+                  <li> Clínica Médica<br />
                   </li>
                   <li> Pediatria <br />
                   </li>
-                  <li> Ginecologia/ Obstetr&iacute;cia<br />
+                  <li> Ginecologia/ Obstetrícia<br />
                   </li>
                   <li> Odontologia <br />
                   </li>
             </ul>
             
 <hr />
-	<h4><strong><img src="/images/st_gear.png" /> Ambulat&oacute;rio</strong></h4><br/>
+	<h4><strong><img src="/images/st_gear.png" /> Ambulatório</strong></h4><br/>
     
         <p style="margin-left: 5%;"><strong>Sala da Comunidade</strong>: <br />
-              <strong>Recep&ccedil;&atilde;o : </strong>3392-6982<br />   <br />
-              <strong>Centro Obst&eacute;trico</strong>:<strong><br />
-              </strong><strong>Recep&ccedil;&atilde;o:</strong>&nbsp;3392-6059<br />
-              <strong>Coordena&ccedil;&atilde;o de Enfermagem:</strong>&nbsp;3392-6051<br /> <br />
-              <strong>Centro Obst&eacute;trico</strong>:<br />
+              <strong>Recepção : </strong>3392-6982<br />   <br />
+              <strong>Centro Obstétrico</strong>:<strong><br />
+              </strong><strong>Recepção:</strong>&nbsp;3392-6059<br />
+              <strong>Coordenação de Enfermagem:</strong>&nbsp;3392-6051<br /> <br />
+              <strong>Centro Obstétrico</strong>:<br />
               <strong>Chefia :</strong>&nbsp;3392-6104<br /> <br />
           
           
-	<span style="margin-left: 5%;"><img src="/images/bullet.gif" /></span>Especialidade do Ambulat&oacute;rio: </span></p>
+	<span style="margin-left: 5%;"><img src="/images/bullet.gif" /></span>Especialidade do Ambulatório: </span></p>
                          
                         
             <UL TYPE="disc"style="margin-left: 15%;">
                    <LI> Cardiologia<br />
                    <LI> Cirurgia Geral<br />
-                   <LI> Cirurgia Pl&aacute;stica<br />
+                   <LI> Cirurgia Plástica<br />
                    <LI> Cirurgia Vascular<br />
                    <LI> Coloproctologia<br />
                    <LI> Dermatologia<br />
@@ -88,27 +89,27 @@
                    <LI> Psicologia<br />
                    <LI> Reumatologia<br />
                    <LI> Urologia<br />
-                   <LI> Emerg&ecirc;ncia
+                   <LI> Emergência
                    </LI>		  
             </UL>
             
             
 <hr />
-	<h4><img src="/images/st_gear.png" /> <strong>Emerg&ecirc;ncia</strong> </h4> <br/>  
+	<h4><img src="/images/st_gear.png" /> <strong>Emergência</strong> </h4> <br/>  
 						  
-          <p style="margin-left: 5%;"><strong>Cl&iacute;nica M&eacute;dica:</strong>&nbsp;3392-8735<br />
-              <strong>Recep&ccedil;&atilde;o:</strong>&nbsp;3392-68029<br />
-              <strong>Ger&ecirc;ncia de enfermagem:</strong>&nbsp;3392-9608<br /> 
+          <p style="margin-left: 5%;"><strong>Clínica Médica:</strong>&nbsp;3392-8735<br />
+              <strong>Recepção:</strong>&nbsp;3392-68029<br />
+              <strong>Gerência de enfermagem:</strong>&nbsp;3392-9608<br /> 
           </p>
           
           
           
 <hr />
-	<h4><img src="/images/st_gear.png" /> <strong> Cl&iacute;nicas de Interna&ccedil;&atilde;o </strong></h4><br/>
+	<h4><img src="/images/st_gear.png" /> <strong> Clínicas de Internação </strong></h4><br/>
 						 
-           <p style="margin-left: 5%;"><strong>Cl&iacute;nica Cirurgica:</strong>&nbsp;3392-6514<br />
-              <strong>Cl&iacute;nica M&eacute;dica:</strong>&nbsp;3392-6607<br />
-              <strong>Cl&iacute;nica Ortop&eacute;dica:</strong>&nbsp;3392-6504<br />
+           <p style="margin-left: 5%;"><strong>Clínica Cirurgica:</strong>&nbsp;3392-6514<br />
+              <strong>Clínica Médica:</strong>&nbsp;3392-6607<br />
+              <strong>Clínica Ortopédica:</strong>&nbsp;3392-6504<br />
               <strong>Maternidade/ Ginecologia:</strong>&nbsp;3392-6409<br />
               <strong>Pediatria:</strong>&nbsp;3392-6314<br />
               <strong>Semi Intensiva:</strong>&nbsp;3392-6517<br />
