--- a/application/modules/site/views/scripts/index/consultar-calendario.phtml
+++ b/application/modules/site/views/scripts/index/consultar-calendario.phtml
@@ -3,24 +3,25 @@
             <section id="corpo">
                 <div id="estatico">
                   <div id="container_d"> 
-                         <div class="left"></div>
-           			<div class="conteudo">
+                      <div class="conteudo">
                                 
                                  <!-- Inicio tema principal  -->  
-                                	<h3><strong>Calendário de Vacina&ccedil;&atilde;o</strong></h3>
+                                	<h3><strong>Calendário de Vacinação</strong></h3>
                         					<div class="hr">
 											</div>
                			 		</div>
                           <!-- FIM tema principal  --> 
+                         <div class="left"></div>
+           			
                          
 <!-- Inicio Leitura - "conteudo"  -->                           
 	<div class="leitura">
                          
 <!-- "conteudo"  -->
 <br />
-<a href="#infantil">Calend&aacute;rio de Vacina&ccedil;&atilde;o Infantil</a><a href="#adolecente"><br />
-Calend&aacute;rio de Vacina&ccedil;&atilde;o Adolecente</a><br />
-<a href="#idosos">Calend&aacute;rio de Vacina&ccedil;&atilde;o Idosos</a> <br />
+<a href="#infantil">Calendário de Vacinação Infantil</a><a href="#adolecente"><br />
+Calendário de Vacinação Adolecente</a><br />
+<a href="#idosos">Calendério de Vacinação Idosos</a> <br />
 <br />
 
 
@@ -46,21 +47,21 @@ Calend&aacute;rio de Vacina&ccedil;&atilde;o Adolecente</a><br />
          
           <tr>
             <td>Hepatite B</td> 
-            <td>1&ordf; dose</td>
+            <td>1º dose</td>
             <td>Hepatite B</td>
           </tr>   
   
             <tr>
             <td>2 meses</td>
             <td> B</td> 
-            <td>2&ordf; dose</td>
+            <td>2º dose</td>
             <td>Hepatite B</td>
          </tr>
             <tr>
-              <td rowspan="3">2 m&ecirc;s</td>
+              <td rowspan="3">2 mês</td>
               <td>Pentav (DTP + hib)</td>
-              <td rowspan="3">1&ordf; dose</td>
-              <td>Difteria, t&eacute;tano, coqueluche, meningite e outras infec&ccedil;&otilde;es por Haemophilus influenza e tipo b</td>
+              <td rowspan="3">1º dose</td>
+              <td>Difteria, tétano, coqueluche, meningite e outras infecções por Haemophilus influenza e tipo b</td>
             </tr>
             <tr>
               <td>&nbsp;</td>
@@ -140,7 +141,7 @@ Calend&aacute;rio de Vacina&ccedil;&atilde;o Adolecente</a><br />
             </tr>
              
             <tr>
-                <td>P&Oacute;LIO</td>
+                <td>PÓLIO</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
@@ -154,7 +155,7 @@ Calend&aacute;rio de Vacina&ccedil;&atilde;o Adolecente</a><br />
             </tr>
              
             <tr>
-                <td>ROTAV&Iacute;RUS</td>
+                <td>ROTAVÍRUS</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
@@ -182,7 +183,7 @@ Calend&aacute;rio de Vacina&ccedil;&atilde;o Adolecente</a><br />
             </tr>
              
             <tr>
-                <td>TR&Iacute;PLICE VIRAL</td>
+                <td>TRÍPLICE VIRAL</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
@@ -196,7 +197,7 @@ Calend&aacute;rio de Vacina&ccedil;&atilde;o Adolecente</a><br />
             </tr>
              
             <tr>
-                <td>TR&Iacute;PLICE BACTERIANA</td>
+                <td>TRÍPLICE BACTERIANA</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
@@ -296,7 +297,7 @@ Calend&aacute;rio de Vacina&ccedil;&atilde;o Adolecente</a><br />
             </tr>
              
             <tr>
-                <td>P&Oacute;LIO</td>
+                <td>PÓLIO</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
@@ -310,7 +311,7 @@ Calend&aacute;rio de Vacina&ccedil;&atilde;o Adolecente</a><br />
             </tr>
              
             <tr>
-                <td>ROTAV&Iacute;RUS</td>
+                <td>ROTAVÍRUS</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
@@ -338,7 +339,7 @@ Calend&aacute;rio de Vacina&ccedil;&atilde;o Adolecente</a><br />
             </tr>
              
             <tr>
-                <td>TR&Iacute;PLICE VIRAL</td>
+                <td>TRÍPLICE VIRAL</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
@@ -352,7 +353,7 @@ Calend&aacute;rio de Vacina&ccedil;&atilde;o Adolecente</a><br />
             </tr>
              
             <tr>
-                <td>TR&Iacute;PLICE BACTERIANA</td>
+                <td>TRÍPLICE BACTERIANA</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
