--- a/application/modules/site/views/scripts/index/index.phtml
+++ b/application/modules/site/views/scripts/index/index.phtml
@@ -168,11 +168,11 @@
     <div class="st_box">
         <div class="st_box_p">
             <h1><strong><img src="images/st_gear.png" /> Hospital Santa Maria<br/>
-                </strong><span style="margin-left: 5%;"><img src="images/bullet.gif" /> Mudan&ccedil;a na vacina&ccedil;&atilde;o infantil.</span></span></h1>
+                </strong><span style="margin-left: 5%;"><img src="images/bullet.gif" /> Mudança na vacinação infantil.</span></span></h1>
             <a id="foto_tumb" href="index.php?link=noticias"><img src="images/hospital_SM.jpg" alt="" width="150" height="100" border="0" class="st_conteudo_img"></a>
-            <p>Tetravalente passa a incluir o imunizante contra a hepatite B e vai combater cinco enfermidades. A partir de agosto, as duas primeiras doses do composto para evitar a poliomielite ser&atilde;o injet&aacute;veis&rdquo;.<br>
+            <p>Tetravalente passa a incluir o imunizante contra a hepatite B e vai combater cinco enfermidades. A partir de agosto, as duas primeiras doses do composto para evitar a poliomielite serão injetáveis.<br>
                 <br>
-                A partir de agosto, o calend&aacute;rio de vacina&ccedil;&atilde;o infantil sofrer&aacute; altera&ccedil;&atilde;o. O Minist&eacute;rio da Sa&uacute;de anunciou ontem que dois novos imunizantes ser&atilde;o inclu&iacute;dos. Com a novidade, em vez de as crian&ccedil;as tomarem as duas primeiras doses do composto contra a poliomielite em gotinhas, as aplica&ccedil;&otilde;es... <br><b><a href="index.php?link=noticias">[Saiba mais]</a></b></p>
+                A partir de agosto, o calendário de vacinação infantil sofrerá altereção. O Ministério da Saúde anunciou ontem que dois novos imunizantes serão incluídos. Com a novidade, em vez de as crianças tomarem as duas primeiras doses do composto contra a poliomielite em gotinhas, as aplicações... <br><b><a href="index.php?link=noticias">[Saiba mais]</a></b></p>
         </div>
     </div>
     <!-- fim primeira divisão da pag. principal -->	   
@@ -212,7 +212,7 @@
             <!-- Inicio Fazer acesso  --> 
             <span style="margin-left: 2%;">
                 <img src="images/bullet.gif" />
-                <strong> Fa&ccedil;a o login abaixo para ter acesso a carterinha de vacina&ccedil;&atilde;o online. 
+                <strong> Faça o login abaixo para ter acesso a carterinha de vacinação online. 
                     <br/>
                     <br/>
                     <br/>
@@ -223,7 +223,7 @@
             <!-- Inicio Formulários  -->  
             <div style="text-align:right; margin:0 8px">
                 <form action="index.php?link=newsletter" method="POST" name="frmFaleConosco" onsubmit="return submit_page(this);" > 
-                    <strong> Usu&aacute;rio: </strong>
+                    <strong> Usuário: </strong>
                     <input id="nome" name="nome" type="text"  placeholder="Inserir seu nome"  /><Br />
                     <br />
                     <strong> Senha: </strong>
