--- a/application/modules/site/views/scripts/index/institucional.phtml
+++ b/application/modules/site/views/scripts/index/institucional.phtml
@@ -4,7 +4,7 @@
 <section id="corpo">
     <div id="estatico">
         <div id="container_d"> 
-            <div class="left"></div>
+            
             <div class="conteudo">
 
                 <!-- Inicio tema principal  -->  
@@ -13,6 +13,8 @@
                 </div>
             </div>
             <!-- FIM tema principal  --> 
+            <div class="left"></div>
+             
 
             <!-- Inicio Leitura - "conteudo"  -->                           
 
@@ -22,44 +24,45 @@
                 <h4><img src="/images/st_gear.png" /><strong> Quem Somos? </strong> </h4>
                 <p style="margin-left: 5%;"><br />
 
-                    <img src="/images/bullet.gif" /> A <strong>Secretaria de Saúde</strong> é o órgão do Poder Executivo do Distrito Federal responsável pela organização e elaboração de planos e políticas públicas voltadas para a promoção, prevenção e assist&ecirc;ncia &agrave; sa&uacute;de. &Eacute; fun&ccedil;&atilde;o da Secretaria de Sa&uacute;de dispor de condi&ccedil;&otilde;es para a prote&ccedil;&atilde;o e recupera&ccedil;&atilde;o da sa&uacute;de da popula&ccedil;&atilde;o, reduzindo as enfermidades, controlando as doen&ccedil;as end&ecirc;micas e parasit&aacute;rias e melhorando a vigil&acirc;ncia &agrave; sa&uacute;de, dando, assim, mais qualidade de vida aos moradores do Distrito Federal.<br />
+                    <img src="/images/bullet.gif" /> A <strong>Secretaria de Saúde</strong> é o órgão do Poder Executivo do Distrito Federal responsável pela organização e elaboração de planos e políticas públicas voltadas para a promoção, prevenção e assistência à saúde. É função da Secretaria de Saúde dispor de condições para a proteção e recuperação da saúde da população, reduzindo as enfermidades, controlando as doenças endêmicas e parasitárias e melhorando a vigilância à saúde, dando, assim, mais qualidade de vida aos moradores do Distrito Federal.<br />
+                    
                     <br />
-                    A miss&atilde;o da Secretaria de Sa&uacute;de do Distrito Federal &eacute; aperfei&ccedil;oar o Sistema &Uacute;nico de Sa&uacute;de no &acirc;mbito do Distrito Federal, garantindo ao cidad&atilde;o atendimento de sa&uacute;de integral e humanizado.<br />
+                    A missão da Secretaria de Saúde do Distrito Federal é aperfeiçoar o Sistema Único de Saúde no âmbito do Distrito Federal, garantindo ao cidadão atendimento de saúde integral e humanizado.<br />
                     <br />
-                    A vis&atilde;o &eacute; ser um sistema de sa&uacute;de que a popula&ccedil;&atilde;o conhe&ccedil;a, preze e confie, sendo excel&ecirc;ncia e refer&ecirc;ncia na aten&ccedil;&atilde;o integral &agrave; sa&uacute;de, apresentando os melhores indicadores de sa&uacute;de do pa&iacute;s.<br />
-                    <br />
-                </p>
-                <hr />
-                <h4><img src="/images/st_gear.png" /><strong> Miss&atilde;o</strong></h4>
-                <p style="margin-left: 5%;"><br />
-                    <img src="/images/bullet.gif" /> &quot;Aperfei&ccedil;oar o Sistema &Uacute;nico de Sa&uacute;de no &acirc;mbito do Distrito Federal, garantindo ao cidad&atilde;o atendimento de sa&uacute;de integral e humanizado&quot;.<br />
+                    A visão é ser um sistema de saúde que a população conheça, preze e confie, sendo excelência e referência na atenção integral à saúde, apresentando os melhores indicadores de saúde do país.<br />
                     <br />
                 </p>
                 <hr />
-                <h4><img src="/images/st_gear.png" /><strong> Vis&atilde;o</strong></h4>
+                <h4><img src="/images/st_gear.png" /><strong> Missão</strong></h4>
                 <p style="margin-left: 5%;"><br />
-                    <img src="/images/bullet.gif" /> &quot;Ser um sistema de sa&uacute;de que a popula&ccedil;&atilde;o conhe&ccedil;a, preze e confie, sendo excel&ecirc;ncia e refer&ecirc;ncia na aten&ccedil;&atilde;o integral &agrave; sa&uacute;de, apresentando os melhores indicadores de sa&uacute;de do pa&iacute;s&quot;.<br />
+                    <img src="/images/bullet.gif" /> "Aperfeiçoar o Sistema Único de Saúde no âmbito do Distrito Federal, garantindo ao cidadão atendimento de saúde integral e humanizado".<br />
                     <br />
                 </p>
                 <hr />
-                <h4><img src="/images/st_gear.png" /><strong> Funda&ccedil;&otilde;es, Autarquias e Org&atilde;os v&iacute;nculados</strong></h4>
+                <h4><img src="/images/st_gear.png" /><strong> Visão</strong></h4>
                 <p style="margin-left: 5%;"><br />
-                    <img src="/images/bullet.gif" /> A Secretaria de Sa&uacute;de do Distrito Federal tem as seguintes funda&ccedil;&otilde;es, autarquias e &oacute;rg&atilde;os vinculados a ela que s&atilde;o:<br />
+                    <img src="/images/bullet.gif" /> "Ser um sistema de saúde que a população conheça, preze e confie, sendo excelência e referência na atenção integral à saúde, apresentando os melhores indicadores de saúde do país".<br />
+                    <br />
+                </p>
+                <hr />
+                <h4><img src="/images/st_gear.png" /><strong> Fundações, Autarquias e Orgãos vinculados</strong></h4>
+                <p style="margin-left: 5%;"><br />
+                    <img src="/images/bullet.gif" /> A Secretaria de Saúde do Distrito Federal tem as seguintes fundações, autarquias e ôrgãos vinculados a ela que são:<br />
                     <br />
                 </p>
 
                 <ul type="disc"style="margin-left: 15%;">
-                    <li> Funda&ccedil;&atilde;o Hemocentro de Bras&iacute;lia (FHB)<br />
+                    <li> Fundação Hemocentro de Brasília (FHB)<br />
                     </li>
-                    <li> Funda&ccedil;&atilde;o de Ensino e Pesquisa em Ci&ecirc;ncias da Sa&uacute;de (FEPECS) <br />
+                    <li> Fundação de Ensino e Pesquisa em Ciências da Saúde (FEPECS) <br />
                     </li>
-                    <li>  Escola Superior de Ci&ecirc;ncias da Sa&uacute;de (ESCS)<br />
+                    <li>  Escola Superior de Ciências da Saúde (ESCS)<br />
                     </li>
-                    <li> Escola T&eacute;cnica de Sa&uacute;de de Bras&iacute;lia (ETESB) <br />
+                    <li> Escola Técnica de Saúde de Brasília (ETESB) <br />
                     </li>
-                    <li> Conselho de Sa&uacute;de do Distrito Federal (CSDF) <br />
+                    <li> Conselho de Saúde do Distrito Federal (CSDF) <br />
                     </li>
-                    <li>Laborat&oacute;rio Central (LACEN). </li> 
+                    <li>Laboratório Central (LACEN). </li> 
                     <br />
                 </ul>
             </div>
