--- a/application/modules/site/layout/layout.phtml
+++ b/application/modules/site/layout/layout.phtml
@@ -101,31 +101,31 @@
 
                     <div class="box" style="border:none">
                         <h1>INSTITUCIONAL</h1>
-                        <p><a href="index.php?link=empresa">A Empresa </a></p>
+                        <p><a href="/index/institucional">A Empresa </a></p>
                     </div>
 
                     <div class="box" style="width:120px;">
                         <h1>SERVIÇOS</h1>
-                        <p><a href="index.php?link=vacinas">Consultar Vacinas </a></p>
-                        <p><a href="index.php?link=servicos&ct=2&sb=2#st">Consultar Calendário</a></p>
-                        <p><a href="index.php?link=postos">Consultar Centros de Saúde</a></p>
-                        <p><a href="index.php?link=legislacao">Consultar Legislação</a></p>
+                        <p><a href="/index/consultar-vacinas">Consultar Vacinas </a></p>
+                        <p><a href="/index/consultar-calendario">Consultar Calendário</a></p>
+                        <p><a href="/index/centro-saude">Consultar Centros de Saúde</a></p>
+                        <p><a href="/index/consultar-legislacao">Consultar Legislação</a></p>
                     </div>
 
                     <div class="box" style="width:120px;">
                         <h1>Utilidades</h1>
-                        <p><a href="index.php?link=duvidas">Dúvidas Frequentes</a></p>
-                        <p><a href="index.php?link=links">Links Úteis</a></p>
+                        <p><a href="/index/duvidas">Dúvidas Frequentes</a></p>
+                        <p><a href="/index/links-uteis">Links Úteis</a></p>
                     </div>
 
                     <div class="box" style="width:120px;">
                         <h1>Campanhas</h1>
-                        <p><a href="index.php?link=campanhas">Capanhas</a></p>
+                        <p><a href="/index/campanhas">Campanhas</a></p>
                     </div>
 
                     <div class="box" style="width:120px;">
                         <h1>CONTATO</h1>
-                        <p><a href="index.php?link=contato">Fale Conosco</a></p>
+                        <p><a href="/index/fale-conosco">Fale Conosco</a></p>
                     </div>
                 </footer>
                 <!-- FIM  de Menus inferior --> 
