--- a/application/modules/site/views/scripts/index/consultar-legislacao.phtml
+++ b/application/modules/site/views/scripts/index/consultar-legislacao.phtml
@@ -1,58 +1,62 @@
 <!-- Estrutura da pagina  -->  
-            <section id="corpo">
-                <div id="estatico">
-                    <div id="container_d"> 
-                         <div class="left"></div>
-                      			<div class="conteudo">
-                                
-                                 <!-- Inicio tema principal  -->  
-                                	<h3><strong>Legisla&ccedil;&atilde;o</strong></h3>
-                        					<div class="hr">
-											</div>
-               			 		</div>
-                          <!-- FIM tema principal  --> 
-                         
-<!-- Inicio Leitura - "conteudo"  -->                           
+<section id="corpo">
+    
+    <div id="estatico">
+        <div id="container_d"> 
+            
+             <div class="conteudo">
 
-	<div class="leitura">
- 		<p style="text-align: justify;">&nbsp;</p>                           
-<!-- "conteudo"  -->                            
-		  	<p><strong>	<img src="/images/st_direito.png" /> Vacina&ccedil;&atilde;o de idosos</strong> </p>
-                
-  				<p style="margin-left: 5%;">A pessoa idosa tem direito a receber do SUS vacinas necess&aacute;rias &agrave; preven&ccedil;&atilde;o de doen&ccedil;as. </p>
+                <!-- Inicio tema principal  -->  
+                <h3><strong>Legislação</strong></h3>
+                <div class="hr">
+                </div>
+            </div>
+            <!-- FIM tema principal  --> 
+            <div class="left"></div>
+            
+            
+
+            <!-- Inicio Leitura - "conteudo"  -->                           
+
+            <div class="leitura">
+                <p style="text-align: justify;">&nbsp;</p>                           
+                <!-- "conteudo"  -->                            
+                <p><strong>	<img src="/images/st_direito.png" /> Vacinação de idosos</strong> </p>
+
+                <p style="margin-left: 5%;">A pessoa idosa tem direito a receber do SUS vacinas necessárias à; prevenvção de doenças. </p>
                 <p style="margin-left: 10%;"><img src="/images/bullet.gif" /></span>Amparo legal: </p>
                 <p style="margin-left: 10% ;"><a href="http://www.planalto.gov.br/ccivil_03/Leis/2003/L10.741.htm" target="_blank"> - Lei  nº 10.741, de 01 de outubro de 2003, Artigo 15, Parágrafo 2º</a>;</p>
-                <p style="margin-left: 10%;"><a href="http://bvsms.saude.gov.br/bvs/saudelegis/gm/2010/prt3318_28_10_2010.html" target="_blank">-  Portaria n&ordm; 3.318, de 28 de outubro 2010</a>
-			</p>
-            
+                <p style="margin-left: 10%;"><a href="http://bvsms.saude.gov.br/bvs/saudelegis/gm/2010/prt3318_28_10_2010.html" target="_blank">-  Portaria nº 3.318, de 28 de outubro 2010</a>
+                </p>
 
-			<p><strong> <img src="/images/st_direito.png" /> Vacina&ccedil;&atilde;o infantil</strong> </p>
-                <p style="margin-left: 5%;">As crian&ccedil;as e os adolescentes t&ecirc;m direito a receber do SUS a vacina&ccedil;&atilde;o necess&aacute;ria &agrave; preven&ccedil;&atilde;o de doen&ccedil;as.</p>
+
+                <p><strong> <img src="/images/st_direito.png" /> Vacinação infantil</strong> </p>
+                <p style="margin-left: 5%;">As crianças e os adolescentes têm direito a receber do SUS a vacinaço necessária à prevenção de doenças.</p>
                 <p style="margin-left: 10%;"><img src="/images/bullet.gif" /></span>Amparo legal: </p>
                 <p style="margin-left: 10% ;"><a href="http://www.planalto.gov.br/ccivil_03/Leis/L8069.htm" target="_blank">- Lei  nº 8.069, de 13 de junho de 1990, Artigo 14, Parágrafo Único;</a></p>
-                <p style="margin-left: 10%;"><a href="http://bvsms.saude.gov.br/bvs/saudelegis/gm/2010/prt3318_28_10_2010.html" target="_blank">-  Portaria n&ordm; 3.318, de 28 de outubro 2010</a>
-			</p>
-            
-            
-			<p><strong> <img src="/images/st_direito.png" /> Legisla&ccedil;&otilde;es espec&iacute;ficas:</strong></p>
-                <p style="margin-left: 5%;">Outras legisla&ccedil;&otilde;es referentes a vacina&ccedil;&atilde;o.</p>
+                <p style="margin-left: 10%;"><a href="http://bvsms.saude.gov.br/bvs/saudelegis/gm/2010/prt3318_28_10_2010.html" target="_blank">-  Portaria nº 3.318, de 28 de outubro 2010</a>
+                </p>
+
+
+                <p><strong> <img src="/images/st_direito.png" /> Legislações específicas:</strong></p>
+                <p style="margin-left: 5%;">Outras legislações referentes a vacinação.</p>
                 <p style="margin-left: 10%;"><img src="/images/bullet.gif" /></span>Amparo legal: </p>
-                <p style="margin-left: 10% ;"><a href="http://www.planalto.gov.br/ccivil_03/leis/l6360.htm" target="_blank">- Lei n&ordm; 6.360, de 23/09/1976 - Remedios;</a></p>
-        <p style="margin-left: 10% ;"><a href="http://www.sgc.goias.gov.br/upload/arquivos/2012-05/instrucao-normativa-o.-1-de-19-de-agosto-de-2004.pdf" target="_blank">- Lei n&ordm; 8.069, de 13/06/</a><a href="http://bvsms.saude.gov.br/bvs/publicacoes/diretrizes_nacionais_atencao_saude_adolescentes_jovens_promocao_saude.pdf">1990</a><a href="http://www.sgc.goias.gov.br/upload/arquivos/2012-05/instrucao-normativa-o.-1-de-19-de-agosto-de-2004.pdf" target="_blank">: ECA;</a></p>
-        <p style="margin-left: 10% ;"><a href="http://portal.saude.gov.br/portal/arquivos/pdf/lei8080.pdf" target="_blank">- Lei n&ordm; 8080, de 19-/10/1990 - Sa&uacute;de;</a></p>
-                <p style="margin-left: 10%;"><a href="http://www.sgc.goias.gov.br/upload/arquivos/2012-05/instrucao-normativa-o.-1-de-19-de-agosto-de-2004.pdf" target="_blank">- Instru&ccedil;&atilde;o Normativa n&ordm; 1, de 19/08/2004 - Gest&atilde;o dos imunobiol&oacute;gicos;</a></p>
+                <p style="margin-left: 10% ;"><a href="http://www.planalto.gov.br/ccivil_03/leis/l6360.htm" target="_blank">- Lei nº 6.360, de 23/09/1976 - Remedios;</a></p>
+                <p style="margin-left: 10% ;"><a href="http://www.sgc.goias.gov.br/upload/arquivos/2012-05/instrucao-normativa-o.-1-de-19-de-agosto-de-2004.pdf" target="_blank">- Lei nº 8.069, de 13/06/</a><a href="http://bvsms.saude.gov.br/bvs/publicacoes/diretrizes_nacionais_atencao_saude_adolescentes_jovens_promocao_saude.pdf">1990</a><a href="http://www.sgc.goias.gov.br/upload/arquivos/2012-05/instrucao-normativa-o.-1-de-19-de-agosto-de-2004.pdf" target="_blank">: ECA;</a></p>
+                <p style="margin-left: 10% ;"><a href="http://portal.saude.gov.br/portal/arquivos/pdf/lei8080.pdf" target="_blank">- Lei nº 8080, de 19-/10/1990 - Sa&uacute;de;</a></p>
+                <p style="margin-left: 10%;"><a href="http://www.sgc.goias.gov.br/upload/arquivos/2012-05/instrucao-normativa-o.-1-de-19-de-agosto-de-2004.pdf" target="_blank">- Instrução Normativa nº 1, de 19/08/2004 - Gestão dos imunobiológicos;</a></p>
                 <p style="margin-left: 10%;"><a href="http://portal.saude.gov.br/portal/arquivos/pdf/lei8080.pdf" target="_blank"></a></p>
-		  
-			</p>
-              
-                      							  
-                          	</div>
-                    	</div>
-                        
-					<div class="right">
-                    </div>
-				</div>
-			</div>
-		<div style="clear:both;">
-        </div>                
+
+                </p>
+
+
+            </div>
+        </div>
+
+        <div class="right">
+        </div>
+    </div>
+</div>
+<div style="clear:both;">
+</div>                
 </section>
