--- a/application/modules/site/views/scripts/index/fale-conosco.phtml
+++ b/application/modules/site/views/scripts/index/fale-conosco.phtml
@@ -2,25 +2,26 @@
 <section id="corpo">
     <div id="estatico">
         <div id="container_d"> 
-            <div class="left"></div>
-            <div class="conteudo">
-
-                <!-- Inicio tema principal  -->  
+            <!-- Inicio tema principal  -->  
                 <h3><strong>Fale Conosco</strong></h3>
                 <div class="hr">
                 </div>
             </div>
             <!-- FIM tema principal  --> 
+            <div class="left"></div>
+            <div class="conteudo">
+
+                
 
             <!-- Inicio Leitura - "conteudo"  -->                           
 
             <div class="leitura">
 
 
-                <img src="/images/st_gear.png" /> <strong>Localiza&ccedil;&atilde;o: </strong><br/>
+                <img src="/images/st_gear.png" /> <strong>Localização: </strong><br/>
 
 
-                <p style="text-align: justify;"><span style="margin-left: 10%;"><img src="/images/bullet.gif" /></span> Disponibilizamos aqui nossos emails e endere&ccedil;o para contato!  </span></p>
+                <p style="text-align: justify;"><span style="margin-left: 10%;"><img src="/images/bullet.gif" /></span> Disponibilizamos aqui nossos emails e endereço para contato!  </span></p>
 
                 <!-- primeiro lado mapa  -->    
                 <div class="st_box_contato">
@@ -36,13 +37,13 @@
                 <!-- Endereço e formulario  -->
                 <div class="st_box_a_contato">
                     <div class="st_box_p_contato">	
-                        <h4><strong> <img src="/images/st_direito.png" /> Endere&ccedil;o</strong></h4>
-                        <p>  Setor de &Aacute;reas Isoladas Norte - SAIN<br /> 
+                        <h4><strong> <img src="/images/st_direito.png" /> Endereço</strong></h4>
+                        <p>  Setor de Áreas Isoladas Norte - SAIN<br /> 
                             Asa Norte - Bloco B<br /> 
-                            (antigo pr&eacute;dio da C&acirc;mara Legislativa) <br />
+                            (antigo prédio da Câmara Legislativa) <br />
                             CEP: 70086-900</p><br />
                         E-mail <a href="ouvidoria@saude.df.gov.br">ouvidoria@saude.df.gov.br</a><br /><br /><br />
-                        <h4><strong><img src="/images/st_direito.png" /> Formul&aacute;rio</strong></h4>
+                        <h4><strong><img src="/images/st_direito.png" /> Formulário</strong></h4>
 
                         <h2> Entre em contato preenchendo nosso formulário </h2>
 
