Trabalhando formulario de cadastro de pessoa.

--- a/application/modules/admin/views/scripts/pessoa/cadastro.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro.phtml
@@ -22,7 +22,7 @@
                 <?php echo $this->form->Registro ?>
             </div>
             <div class="control-group">
-                <?php echo $this->form->Estado_Civil ?>
+                <?php echo $this->form->Estado_Civil_Cod_Estado_Civil ?>
             </div>
             <div class="control-group">
                 <?php echo $this->form->TB_Unidade_Saude_Cod_Un_Saude ?>
@@ -34,31 +34,31 @@
         <fieldset>
             <legend>Dados de Localização</legend>
             <div class="control-group">
-                <?php echo $this->form->Endereco->COD_CID ?>
+                <?php echo $this->form->Endereco->Cod_Cid ?>
             </div>
             <div class="control-group">
-                <?php echo $this->form->Endereco->ENDERECO ?>
+                <?php echo $this->form->Endereco->Endereco ?>
             </div>
             <div class="control-group">
                 <?php echo $this->form->Endereco->CEP ?>
             </div>
             <div class="control-group">
-                <?php echo $this->form->Endereco->BAIRRO ?>
+                <?php echo $this->form->Endereco->Bairro ?>
             </div>
             <div class="control-group">
-                <?php echo $this->form->Endereco->NUMERO ?>
+                <?php echo $this->form->Endereco->Numero ?>
             </div>
             <div class="control-group">
-                <?php echo $this->form->Endereco->COMPLEMENTO ?>
+                <?php echo $this->form->Endereco->Complemento ?>
             </div>
         </fieldset>
         <fieldset>
             <legend>Dados de Familiares</legend>
             <div class="control-group">
-                <?php echo $this->form->NOME_MAE ?>
+                <?php echo $this->form->Nome_Mae ?>
             </div>
             <div class="control-group">
-                <?php echo $this->form->NOME_PAI ?>
+                <?php echo $this->form->Nome_Pae ?>
             </div>
         </fieldset>
         <div class="form-actions">
