--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -1,42 +1,103 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <title>SIMOVA</title>
-        <meta http-equiv="" charset="utf-8"></meta>
-        <link rel="stylesheet" href="/assets/css/bootstrap.css"></link>
-        <link rel="stylesheet" href="/assets/css/bootstrap.min.css"></link>
-        <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--
 
-        <!-- Fav and touch icons -->
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-        <link rel="shortcut icon" href="../assets/ico/favicon.png">
+        
+        Nome       : Modulo Administrativo Simova
+        Versão    : 1.0
+        
+
+-->
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <meta name="keywords" content="" />
+        <meta name="description" content="" />
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <title>Painel Administrativo</title>
+
+        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="/css/acoordeon.css" rel="stylesheet" type="text/css" />
+        <script type="text/javascript" src="/js/jquery.1.9.js"></script>
+        <script type="text/javascript" src="/js/acoordeon.js"></script>
+
     </head>
-</head>
-<body
-    <div class="container-fluid">
-        <div class="row-fluid">
-            <div class="span2">
-                <div class="well sidebar-nav">
-                    <ul class="nav nav-list">
-                        <li><h2>Menu</h2></li>
-                        <li><a href="#">Principal</a></li>
-                        <li><a href="/admin/pessoa/cadastro">Usuários</a></li>
-                    </ul>
+    <body>
+        <div id="bg">
+            <div id="outer">
+                <div id="header">
+                    <div id="logo">
+                        <h1>
+                            <a href="paginas/principal.html" target="principal">
+                                <img src="imagens/simova_logo.png"></img>
+                            </a>
+                        </h1>
+                    </div>
+                    <div id="nav">
+                        <h1 id="faixa">Painel Admininstrativo</h1>
+                        <br class="clear" />
+                    </div>
+                </div>
+                <div id="main">
+                    <div id="sidebar">
+                        <h3 id="tam">
+                            Menu
+                        </h3>
+                        <ul id="menuGeral">
+                            <li>
+                                <a href="#" class="itemMenu">Administrador</a>
+                                <div class="conteudoMenu">
+                                    <a href="paginas/editarPerfil.html" target="principal">Editar Perfil</a>
+
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#" class="itemMenu">Funcionários</a>
+                                <div class="conteudoMenu">
+                                    <a href="paginas/consultarFuncionarios.html" target="principal">Consultar</a>
+                                    <a href="paginas/cadastrarFuncionarios.html" target="principal">Cadastrar</a>
+
+                                </div>
+                            </li>
+                            <li><a href="#" class="itemMenu">Pacientes</a>
+                                <div class="conteudoMenu">
+                                    <a href="paginas/consultarUsuarios.html" target="principal">Consultar</a>
+                                    <a href="paginas/cadastrarUsuarios.html" target="principal">Cadastrar</a>
+
+                                </div>
+                            </li>
+                            <li><a href="#" class="itemMenu">Vacinas</a>
+                                <div class="conteudoMenu">
+                                    <a href="paginas/consultarVacinas.html" target="principal">Consultar</a>
+                                    <a href="paginas/cadastrarVacinas.html" target="principal">Cadastrar</a>
+
+                                </div>
+                            </li>
+                            <li><a href="#" class="itemMenu">Calendários de Vacinas</a>
+                                <div class="conteudoMenu">
+                                    <a href="paginas/consultarVacinas.html" target="principal">Consultar</a>
+                                    <a href="paginas/cadastrarVacinas.html" target="principal">Cadastrar</a>
+
+                                </div>
+                            </li>
+                            <li><a href="#" class="itemMenu">Cartão de Vacinas</a>
+                                <div class="conteudoMenu">
+                                    <a href="paginas/consultarVacinas.html" target="principal">Consultar</a>
+                                    <a href="paginas/cadastrarVacinas.html" target="principal">Cadastrar</a>
+                                </div>
+                            </li>
+                        </ul>                   
+                    </div>
+                    <?php echo $this->layout()->content ?>
+<!--                    <iframe src="paginas/principal.html" name="principal">
+                        <div id="content">
+                            <h1>Seja bem-vindo administrador!<h1>
+                                    <br class="clear" />
+                                    </div>
+                                    </iframe>-->
+                </div>
+                <div id="copyright">
+                    &copy; SIMOVA - Sistema de Monitoramento de Vacinas 
                 </div>
             </div>
-            <div class="span9">
-                <?php echo $this->layout()->content; ?>
-            </div>
-        </div>
-    </div>
-</body>
-<!-- Le javascript
-    ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="/assets/js/jquery.js"></script>
-<script src="/assets/js/bootstrap.js"></script>
-<script src="/assets/js/bootstrap.min.js"></script>
+    </body>
 </html>
