Adicionado layout do admin

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -15,11 +15,14 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>Painel Administrativo</title>
 
-        <link href="style.css" rel="stylesheet" type="text/css" />
-        <link href="/css/acoordeon.css" rel="stylesheet" type="text/css" />
-        <script type="text/javascript" src="/js/jquery.1.9.js"></script>
-        <script type="text/javascript" src="/js/acoordeon.js"></script>
-
+        <link href="/assets/css/acoordeon.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <!--<link href="/assets/css/css_alt.css" rel="stylesheet" type="text/css" />-->
+        <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
+        
+        <script type="text/javascript" src="/assets/js/jquery.js"></script>
+        <script type="text/javascript" src="/assets/js/acoordeon.js"></script>
     </head>
     <body>
         <div id="bg">
@@ -27,14 +30,14 @@
                 <div id="header">
                     <div id="logo">
                         <h1>
-                            <a href="paginas/principal.html" target="principal">
-                                <img src="imagens/simova_logo.png"></img>
+                            <a href="/admin/">
+                                <img src="/assets/imagens/simova_logo.png"></img>
                             </a>
                         </h1>
                     </div>
                     <div id="nav">
                         <h1 id="faixa">Painel Admininstrativo</h1>
-                        <br class="clear" />
+                        <br class="clear"/>
                     </div>
                 </div>
                 <div id="main">
@@ -44,42 +47,42 @@
                         </h3>
                         <ul id="menuGeral">
                             <li>
-                                <a href="#" class="itemMenu">Administrador</a>
+                                <a class="itemMenu">Administrador</a>
                                 <div class="conteudoMenu">
                                     <a href="paginas/editarPerfil.html" target="principal">Editar Perfil</a>
 
                                 </div>
                             </li>
                             <li>
-                                <a href="#" class="itemMenu">Funcionários</a>
+                                <a class="itemMenu">Funcionários</a>
                                 <div class="conteudoMenu">
                                     <a href="paginas/consultarFuncionarios.html" target="principal">Consultar</a>
                                     <a href="paginas/cadastrarFuncionarios.html" target="principal">Cadastrar</a>
 
                                 </div>
                             </li>
-                            <li><a href="#" class="itemMenu">Pacientes</a>
+                            <li><a class="itemMenu">Pacientes</a>
                                 <div class="conteudoMenu">
                                     <a href="paginas/consultarUsuarios.html" target="principal">Consultar</a>
                                     <a href="paginas/cadastrarUsuarios.html" target="principal">Cadastrar</a>
 
                                 </div>
                             </li>
-                            <li><a href="#" class="itemMenu">Vacinas</a>
+                            <li><a class="itemMenu">Vacinas</a>
                                 <div class="conteudoMenu">
                                     <a href="paginas/consultarVacinas.html" target="principal">Consultar</a>
                                     <a href="paginas/cadastrarVacinas.html" target="principal">Cadastrar</a>
 
                                 </div>
                             </li>
-                            <li><a href="#" class="itemMenu">Calendários de Vacinas</a>
+                            <li><a class="itemMenu">Calendários de Vacinas</a>
                                 <div class="conteudoMenu">
                                     <a href="paginas/consultarVacinas.html" target="principal">Consultar</a>
                                     <a href="paginas/cadastrarVacinas.html" target="principal">Cadastrar</a>
 
                                 </div>
                             </li>
-                            <li><a href="#" class="itemMenu">Cartão de Vacinas</a>
+                            <li><a class="itemMenu">Cartão de Vacinas</a>
                                 <div class="conteudoMenu">
                                     <a href="paginas/consultarVacinas.html" target="principal">Consultar</a>
                                     <a href="paginas/cadastrarVacinas.html" target="principal">Cadastrar</a>
@@ -99,5 +102,6 @@
                     &copy; SIMOVA - Sistema de Monitoramento de Vacinas 
                 </div>
             </div>
+        </div>
     </body>
 </html>
